# byteview

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
include/: analyzer.hpp  encoder.hpp  file_reader.hpp  hex_dump.hpp  pe_parser.hpp  png_parser.hpp  signature.hpp  strings.hpp  type_check.hpp
samples/: readme.txt
src/: analyzer.cpp  encoder.cpp  file_reader.cpp  hex_dump.cpp  main.cpp  pe_parser.cpp  png_parser.cpp  signature.cpp  strings.cpp  type_check.cpp
